boton de inicio hecho

--- a/app/components/Home/home.module.css
+++ b/app/components/Home/home.module.css
@@ -66,7 +66,10 @@
     .btn {
         padding: 0.5rem 1rem;
         font-size: 1rem;
-
+        color: white;
+        background-color: black;
+        border: none;
+        border-radius: 5px;
     }
 
     /*Que estas buscando*/
