--- a/app/productos/productos.module.css
+++ b/app/productos/productos.module.css
@@ -83,10 +83,19 @@
       margin-right: 1rem; 
   }
   
+  
     .Container {
-      width: 90%;
-      padding: 20px;
-      text-align: center;
+      .Container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        justify-content: center;
+        text-align: center;
+        margin: auto; 
+        
+        max-width: 800px; 
+      }
+     
     }
   
     .TituloCategorias {
@@ -99,10 +108,18 @@
       display: grid;
       grid-template-columns: 1fr 1fr;
       gap: 50px;
+     text-align: center;
+     margin: 1rem;
     }
     .CategoriesDentro{
       display: flex;
       flex-direction: column;
+      gap: 10px;
+      
+    }
+    .CategoriesDentro p {
+      display: flex;
+      justify-content: center;
     }
     
   
@@ -129,55 +146,8 @@
       font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
   
-    /*Navegador*/
   
-    .navegador {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 50px;
-      box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
-        rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
-      border-radius: 15px 15px 0 0;
-      padding: 0.4rem;
-      position: relative;
-    }
-  
-    .primeros2 {
-      display: flex;
-      margin-right: 30px;
-      gap: 30px;
-    }
-  
-    .ultimos2 {
-      display: flex;
-      margin-left: 10px;
-      gap: 30px;
-    }
-  
-    .ItemsNav a {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      position: relative;
-      color: black;
-      text-decoration: none;
-    }
-  
-    .favoritos {
-      padding: 1rem;
-      border-radius: 50%;
-      background-color: #2e3192;
-      position: absolute;
-      top: -20px;
-      left: 50%;
-      transform: translateX(-50%);
-    }
-  
-    .favoritos path {
-      color: white;
-    }
+    
     }
   
     
