--- a/app/Home/home.module.css
+++ b/app/Home/home.module.css
@@ -1,9 +1,13 @@
 
 @media screen and (max-width: 430px) {
-    .headerPadre {
+    .HeaderPadre {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         padding: 1rem;
-        box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
-    }
+        box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
+          rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+      }
 
     .cabeza {
         display: flex;
