--- a/app/muchosprodu/muchosprodu.module.css
+++ b/app/muchosprodu/muchosprodu.module.css
@@ -1,8 +1,17 @@
+.HeaderPadre {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
+      rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+  }
+
 .carta {
     display: grid;
-    grid-template-columns: 1fr 2fr; /* Imagen ocupa 1 parte, texto ocupa 2 partes */
-    gap: 20px; /* Espacio entre elementos */
-    align-items: center; /* Centra verticalmente */
+    grid-template-columns: 1fr 2fr; 
+    gap: 20px; 
+    align-items: center;
     border: 2px solid black;
     border-radius: 5px;
     padding: 10px;
@@ -17,12 +26,13 @@
 }
 .imgCarta {
     width: 100%;
-    max-width: 100px; /* Tamaño máximo de la imagen */
-    height: auto; /* Para mantener la proporción */}
+    max-width: 100px; 
+    height: auto; }
 .pmucho{
     grid-area: pmucho;
 }
 .h1mucho{
     grid-area: h1mucho;
 }
+
 
