--- a/app/principal/principal.module.css
+++ b/app/principal/principal.module.css
@@ -1,43 +1,51 @@
-
-
-.main{
-    
-justify-content: center;
-align-items: center;
-text-align: center;     
-
-}
-.bodyy{
+.body {
+    height: 100%;
     margin: 0;
     padding: 0;
+    
+}
+
+.padre {
+    background: linear-gradient(180deg, 
+        rgba(255,255,255,1) 0%, 
+        rgb(255, 255, 255) 25%,
+        rgba(0,176,255,1) 50%, 
+        rgba(69,139,199,1) 75%, 
+        rgba(0,122,255,1) 100% 
+    );
+    height: 100vh; /* Full viewport height */
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(180deg, 
-        rgba(255,255,255,1) 0%, /* Blanco */
-        rgb(255, 255, 255) 25%, /* Celeste */
-        rgba(0,176,255,1) 50%, /* Celeste más claro */
-        rgba(69,139,199,1) 75%, /* Celeste */
-        rgba(0,122,255,1) 100% /* Celeste más oscuro */
-    );
-    background-size: 100% 100vh; /* Ajusta el tamaño del degradado */
-
 }
-.d{
+
+.main {
+    justify-content: center;
+    align-items: center;
+    text-align: center;     
+}
+
+.d {
     color: #021450;
     font-weight: bold;
     margin-top: 4rem !important;
     text-decoration: none;
 }
-.e{
+.clasHR{
+    color: gray;
+    border: none
+}
+
+.e {
     @extend d;
 }
-.h1{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+
+.h1 {
     font-weight: bold;
     font-size: 2.5rem !important;
 }
-.bon{
+
+.bon {
     margin-top: 3rem;
     display: grid;
     gap: 1.5rem;
@@ -45,27 +53,23 @@ text-align: center;
     text-align: center;
     align-items: center;
 }
-.kali{
- width: 200px;
- margin-top: 1rem;
-  color: #ffffff;
-  background-color: #021450;
-  border-style: solid;
-  border-width: 2px 2px 2px 2px;
-  border-color: rgba(255, 255, 255, 0.333);
-  border-radius: 40px 40px 40px 40px;
-  padding: 16px 24px 16px 28px; 
-  border: 0 #2E3192;
-  font-size: 1.2rem;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
-  
+
+.boton {
+    width: 200px;
+    margin-top: 1rem;
+    color: #ffffff;
+    background-color: #021450;
+    border-style: solid;
+    border-width: 2px 2px 2px 2px;
+    border-color: rgba(255, 255, 255, 0.333);
+    border-radius: 40px 40px 40px 40px;
+    padding: 16px 24px 16px 28px; 
+    border: 0 #2E3192;
+    font-size: 1.2rem;
+    text-decoration: none;
 }
 
-
-   
-     .img{
+.img {
     width: 50%;
     margin-top: 8rem;
 }
-   
-   
