--- a/app/views/principal/principal.module.css
+++ b/app/views/principal/principal.module.css
@@ -16,13 +16,15 @@
     height: 100vh; /* Full viewport height */
     display: flex;
     justify-content: center;
-    align-items: center;
+    
 }
 
 .main {
-    justify-content: center;
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    text-align: center;     
+    justify-content: center;
+    text-align: center; 
 }
 
 .d {
@@ -70,6 +72,6 @@
 }
 
 .img {
-    width: 50%;
-    margin-top: 8rem;
+    width: 100%;
+   
 }
