--- a/app/views/iniciar_Sesion/iniciar_Sesion.module.css
+++ b/app/views/iniciar_Sesion/iniciar_Sesion.module.css
@@ -12,7 +12,7 @@
    
   }
   
-  .header-registro {
+  .headerRegistro {
     text-align: center;
     margin-bottom: 20px;
   }
@@ -31,7 +31,7 @@
     color: #666;
   }
   
-  .form_container {
+  .formContainer {
     display: flex;
     flex-direction: column;
   }
@@ -86,18 +86,18 @@
     background: #0056b3;
   }
   
-  .additional-links {
+  .links {
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
   }
   
-  .additional-links a {
+  .links a {
     color: #007bff;
     font-size: 14px;
   }
   
-  .additional-links a:hover {
+  .links a:hover {
     text-decoration: underline;
   }
   
