--- a/app/views/iniciar_Sesion/iniciar_Sesion.module.css
+++ b/app/views/iniciar_Sesion/iniciar_Sesion.module.css
@@ -16,20 +16,22 @@
     text-align: center;
     margin-bottom: 20px;
   }
-  
-  .logo {
-    width: 150px;
-    margin-bottom: 10px;
-  }
-  
-  h1 {
+  .headerRegistro h1{
     font-size: 24px;
-    margin-bottom: 10px;
+    margin-bottom: 10px; 
   }
-  
-  p {
+
+  .headerRegistro p{
     color: #666;
   }
+  
+  .logo {
+    width: auto;
+    margin-bottom: auto;
+  }
+
+ 
+
   
   .formContainer {
     display: flex;
@@ -38,7 +40,11 @@
   
   .input_container {
     position: relative;
-    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    margin-top: 1rem;
+    justify-content: center;
+    margin: 1rem;
   }
   
   .input_label {
@@ -56,7 +62,7 @@
   }
   
   .input_field {
-    width: 85%;
+    
     padding: 10px 10px 10px 40px;
     border: 1px solid #ddd;
     border-radius: 4px;
@@ -71,6 +77,11 @@
   .checkbox_input {
     margin-right: 10px;
   }
+  .divSumbit{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   
   .submit_button {
     background: #007bff;
@@ -78,8 +89,11 @@
     padding: 10px;
     border: none;
     border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
+    font-size: 18px;
+    text-align: center;
+    text-decoration: none;
+    width: 80%;
+    margin-top: 1rem;
   }
   
   .submit_button:hover {
@@ -88,14 +102,25 @@
   
   .links {
     display: flex;
-    justify-content: space-between;
+    justify-content:center;
     margin-top: 20px;
+    gap: 50px;
+
+
   }
   
   .links a {
-    color: #007bff;
+    color: gray;
     font-size: 14px;
+    text-decoration: none;
   }
+
+ 
+  .strongA{
+    text-decoration: underline;
+    color: rgb(0, 0, 0);
+  }
+  
   
   .links a:hover {
     text-decoration: underline;
@@ -135,7 +160,7 @@
     justify-content: center;
     gap: 30px;
     color: #acacac;
-    padding-top: 1rem;
+    padding-top: 2rem;
   }
   
   
@@ -148,19 +173,49 @@
     
   }
   
-  .btn-G {
-    margin-top: 10px;
-    width: 100%;
-    height: 50px;
-    border-radius: 10px;
+
+.divBtn{
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+  .btnG {
     display: flex;
-    justify-content: center;
     align-items: center;
-    font-weight: 500;
+    justify-content: center;
+    padding: 10px 20px;
     gap: 10px;
-    border: 1px solid #ededef;
     background-color: white;
+    border: 1px solid #ededef;
+    border-radius: 5px;
+    font-weight: 500;
+   
+    width: 80%;
     cursor: pointer;
-    transition: 0.2s ease-in-out;
-  }
+    
+}
+
+.btnG:hover {
+  background-color: #f1f1f1;
+}
+
+.btnG svg {
+    margin-right: 10px;
+}
+.divRegistro{
   
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 17rem;
+}
+.divRegistro a{
+  text-decoration: none;
+  color: gray;
+}
+.divRegistro strong{
+  color: rgb(0, 0, 0);
+  text-decoration: underline;
+}
+
