--- a/app/views/categorias/muchosprodu.module.css
+++ b/app/views/categorias/muchosprodu.module.css
@@ -52,6 +52,9 @@
     position: absolute;
     top: 0px;
     right:0px;
-    width: 24px;
-    height: 24px;
+    width: 30px;
+    height: 25px;
+    background-color: rgb(255, 255, 255);
+  padding: 1.5px;
+    border-radius: 0 0 0 5px;
 }
