--- a/app/views/Inicio/home.module.css
+++ b/app/views/Inicio/home.module.css
@@ -1,5 +1,5 @@
-
 @media screen and (max-width: 430px) {
+    /* Estilos para el encabezado */
     .HeaderPadre {
         display: flex;
         justify-content: center;
@@ -7,7 +7,7 @@
         padding: 1rem;
         box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
           rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
-      }
+    }
 
     .cabeza {
         display: flex;
@@ -40,20 +40,16 @@
     }
 
     .divCabeza input {
-        
         border:1px solid rgb(201, 201, 201);
         border-radius: 5px;
     }
-
-    
 
     /* Sección Ofertas */
     .ofertas {
         margin-top: 1rem;
         box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
-        background: #ffffff;
         padding: 2rem 0;
-        background: rgb(255,255,255);
+        background: #ffffff;
         background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(35,150,255,1) 100%);
     }
 
@@ -76,31 +72,46 @@
         border-radius: 5px;
     }
 
-    /*Que estas buscando*/
-
+    /* Sección Qué estás buscando */
     .queEstasBuscando {
         padding: 2rem 0;
     }
 
-   .dentroQueEstasBuscando {
+    .dentroQueEstasBuscando {
         display: flex;
         justify-content: space-between;
         align-items: center;
         margin-bottom: 1rem;
         padding: .3rem;
     }
+
     .dentro-que-estas-buscando a {
         margin: 1rem;
         color: black;
     }
 
     .opciones {
-        display: flex;
+        
         align-items: center;
         overflow-x: auto;
         gap: 2rem;
         padding: 1rem;
-        
+    }
+
+    .opcionesArriba {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        gap: 2rem;
+        padding: 1rem;
+    }
+
+    .opcionesAbajo {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        gap: 2rem;
+        padding: 1rem;
     }
 
     .opcion {
@@ -113,15 +124,14 @@
         text-align: center;
         background-color: rgb(255, 255, 255);
         border-radius: 10px;
-        
         box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
-       
     }
 
     .opcion img {
         height: 100px;
-
         width: 100px;
+        object-fit: cover;
+        border-radius: 10px;
     }
 
     .opcion p {
@@ -129,11 +139,16 @@
         font-size: 1rem; 
     }
 
-
     /* Sección Lo más Vendido */
-.container{
-    padding: 1rem;
-}
+    .masVendido {
+        overflow-x: auto;
+        white-space: nowrap;
+    }
+
+    .container {
+        padding: 1rem;
+    }
+
     .cardsContainer {
         overflow-x: auto;
         white-space: nowrap;
@@ -151,10 +166,11 @@
         width: 300px;
     }
 
-    .masVendido {
-        padding: 2rem 0;
-        overflow-x: auto;
-        white-space: nowrap;
+    .cardImgTop {
+        width: 100%;
+        height: 155px;
+        object-fit: cover;
+        border-radius: 10px;
     }
 
     .sectionHeader {
@@ -176,9 +192,4 @@
         display: flex;
         justify-content: center;
     }
-    .cardImgTop{
-        width: 100%;
-    }
-
-    
 }
