--- a/app/views/categorias/muchosprodu.module.css
+++ b/app/views/categorias/muchosprodu.module.css
@@ -5,34 +5,57 @@
     padding: 1rem;
     box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
       rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
-  }
+}
 
 .carta {
-    display: grid;
-    grid-template-columns: 1fr 2fr; 
-    gap: 20px; 
-    align-items: center;
-    border: 2px solid black;
-    border-radius: 5px;
-    padding: 10px;
-    width: 350px;
-    
-    box-shadow: 10px 10px 10px rgb(72, 12, 238);
-}
-.padreCarta {
-    margin-top: 2rem;
     display: flex;
-    justify-content: center;
-}
-.imgCarta {
-    width: 100%;
-    max-width: 100px; 
-    height: auto; }
-.pmucho{
-    grid-area: pmucho;
-}
-.h1mucho{
-    grid-area: h1mucho;
+    flex-direction: column;
+    border: 2px solid rgb(159, 157, 157);
+    box-shadow: 3px 3px 3px 3px rgb(159, 157, 157);
+    border-radius: 4px;
+    width: 45vw;
+    height: auto;
+    position: relative;
 }
 
+.padreCarta {
+    display: grid;
+    align-items: center;
+    grid-template-columns: 1fr 1fr; 
+    grid-template-rows: 1fr 1fr; 
+    justify-content: center;
+    gap: 1rem;
+    padding: 10px;
+}
+
+.imgCarta {
+    max-width: 100%; 
+    height: auto;
+}
+
+.pmucho {
+    margin: 2px;
+    font-size: 12px;
+}
+
+.h1mucho {
+    margin: 5px;
+    font-size: 12px;
+}
+
+.texto {
+    text-align: justify;
+    gap: 20px;
+}
+
+.huevo {
+    position: absolute;
+    top: 0px;
+    right:0px;
+    width: 30px;
+    height: 25px;
+    background-color: rgb(255, 255, 255);
+  padding: 1.5px;
+    border-radius: 0 0 0 5px;
+}
 
