--- a/app/views/productos/productos.module.css
+++ b/app/views/productos/productos.module.css
@@ -137,17 +137,20 @@
    
   
     .Category img {
-  
+        object-fit: cover;
       height: 120px;
   
       width: 120px;
       
-      }.category p {
+      }
+      .category p {
       margin: 0;
       font-size: 16px;
       color: #555;
+      text-decoration: none;
       font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
+
   
   
     
