--- a/app/views/productos/productos.module.css
+++ b/app/views/productos/productos.module.css
@@ -123,6 +123,7 @@
     .CategoriesDentro p {
       display: flex;
       justify-content: center;
+      
     }
     
   
@@ -133,14 +134,15 @@
       background-color: #ffffff;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       border-radius: 20px;
+      
     }
    
   
     .Category img {
-        object-fit: cover;
-      height: 120px;
-  
-      width: 120px;
+      width: 100%;
+      height: 155px;
+      object-fit: cover;
+      border-radius: 10px;
       
       }
       .category p {
