--- a/app/views/search/search.module.css
+++ b/app/views/search/search.module.css
@@ -7,6 +7,12 @@
     background-color: #f9f9f9;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+
+    overflow-x: hidden; 
+    transition: transform 0.3s ease;
+}
+.slide-in {
+    transform: translateX(-100%);
 }
 
 .searchHeader {
