--- a/app/views/iniciar_Sesion/iniciar_Sesion.module.css
+++ b/app/views/iniciar_Sesion/iniciar_Sesion.module.css
@@ -229,3 +229,154 @@
 
 
 
+.headerRegistro {
+  background-color:
+  #41419b; 
+  padding: 20px; 
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.title {
+  font-size: 23px;
+  color: #41419b; ;
+  font-weight: 600;
+  letter-spacing: -1px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding-left: 30px;
+  margin-top: 2rem;
+
+}
+.bienvenida{
+  font-size: 28px;
+  justify-content: center;
+  text-align: center;
+  color: #41419b; ;
+  font-weight: 600;
+  letter-spacing: -1px;
+  position: relative;
+  display: flex;
+  align-items: center;
+
+}
+
+.todo {
+  display: flex;
+  justify-content: center;
+
+}
+
+.form {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 10px;
+  max-width: 350px;
+  padding: 20px;
+  border-radius: 20px;
+  position: relative;
+}
+.flex {
+  display: flex;
+  width: 100%;
+  gap: 6px;
+}
+.title::before, .title::after {
+  position: absolute;
+  content: "";
+  height: 16px;
+  width: 16px;
+  border-radius: 50%;
+  left: 0px;
+  background-color: #41419b; ;
+}
+
+.title::before {
+  width: 18px;
+  height: 18px;
+}
+
+.title::after {
+  width: 18px;
+  height: 18px;
+  animation: pulse 1s linear infinite;
+}
+
+/* Estilos para el mensaje y el enlace de inicio de sesión */
+.message, .signin {
+  color: rgba(88, 87, 87, 0.822);
+  font-size: 14px;
+}
+
+.signin {
+  text-align: center;
+  margin-top: 1rem;
+}
+
+.signin a {
+  color: #41419b; ;
+}
+
+.signin a:hover {
+  text-decoration: underline royalblue;
+}
+.form label {
+  position: relative;
+}
+
+.form label .input {
+  width: 100%;
+  padding: 10px 10px 20px 10px;
+  outline: 0;
+  border: 1px solid rgba(105, 105, 105, 0.397);
+  border-radius: 10px;
+}
+
+.form label .input + span {
+  position: absolute;
+  left: 10px;
+  top: 15px;
+  color: grey;
+  font-size: 0.9em;
+  cursor: text;
+  transition: 0.3s ease;
+}
+
+.form label .input:placeholder-shown + span {
+  top: 15px;
+  font-size: 0.9em;
+}
+
+.form label .input:focus + span, .form label .input:valid + span {
+  top: 30px;
+  font-size: 0.7em;
+  font-weight: 600;
+}
+
+.form label .input:valid + span {
+  color: green;
+}
+
+.submit {
+  border: none;
+  outline: none;
+  background-color: #41419b; ;
+  padding: 10px;
+  border-radius: 10px;
+  color: #fff;
+  font-size: 16px;
+  transform: .3s ease;
+}
+
+@keyframes pulse {
+  from {
+    transform: scale(0.9);
+    opacity: 1;
+  }
+  to {
+    transform: scale(1.8);
+    opacity: 0;
+  }
+}
