--- a/app/views/productos/productos.module.css
+++ b/app/views/productos/productos.module.css
@@ -1,4 +1,7 @@
 @media screen and (max-width: 430px) {
+  .container_padre{
+    padding: 20px;
+  }
   .productos_container{
     display: flex;
     flex-direction: column;
