--- a/app/views/Inicio/home.module.css
+++ b/app/views/Inicio/home.module.css
@@ -96,7 +96,7 @@
         align-items: center;
         overflow-x: auto;
         gap: 2rem;
-        padding: 1rem;
+        margin: 1rem;
     }
 
     .opcionesArriba {
