--- a/app/components/navegador/navegador.module.css
+++ b/app/components/navegador/navegador.module.css
@@ -9,6 +9,12 @@
     border-radius: 15px 15px 0 0;
     padding: 0.4rem;
     position: relative;
+    position: fixed;  
+    bottom: 0; 
+    left: 0;  
+    width: 100%;
+    background-color: white;  
+    z-index: 1000; 
   }
   
   
