--- a/app/views/favoritos/favoritos.module.css
+++ b/app/views/favoritos/favoritos.module.css
@@ -1,6 +1,24 @@
+
+.TituloCategorias {
+    flex-grow: 1; 
+    text-align: center; 
+    margin: 0;
+  }
+  .AHeader{
+    display: flex;
+    align-items: center;
+    color: black;
+    margin-right: auto; 
+  }
+  .VolverHeader{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+  }
+
 .favoritosContainer {
     padding: 20px;
-    background-color: #f8f9fa;
     min-height: 100vh;
     font-family: 'Arial', sans-serif;
     color: #333;
@@ -85,5 +103,62 @@
     text-align: center;
     font-size: 1.2rem;
     color: #666;
-    margin-top: 50px;
+}
+.container_noHay {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
+    padding: 15px;
+}
+
+.div_noHay {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    padding: 20px;
+}
+
+
+
+.div_noHay img {
+    width: 60px; 
+    margin-bottom: 15px;
+    opacity: 0.4;
+    transition: opacity 0.3s ease;
+}
+
+.div_noHay img:hover {
+    opacity: 1;
+}
+
+.noFavoritos {
+    font-size: 1.1rem; 
+    color: #555;
+    margin-bottom: 10px;
+    line-height: 1.4; 
+}
+.noFavoritos_principal{
+    color: black;
+    font-size: 18px;
+}
+.noFavoritos{
+    color: gray;
+    font-size: 16px;
+
+}
+
+.noFavoritos a {
+    color: #3498db;
+    text-decoration: none;
+    font-weight: bold;
+    transition: color 0.3s ease;
+    margin-left: .5rem;
+    
+}
+
+.noFavoritos a:hover {
+    color: #2980b9;
 }
