--- a/app/views/productos/productos.module.css
+++ b/app/views/productos/productos.module.css
@@ -88,6 +88,7 @@
       display: flex;
       align-items: center;
       margin-right: auto; 
+      color: black;
     }
     .HeaderTitle {
       display: flex;
