--- a/app/views/perfil/perfil.module.css
+++ b/app/views/perfil/perfil.module.css
@@ -80,3 +80,49 @@
   color: #333; /* Color de texto oscuro para legibilidad */
   transition: background-color 0.3s, color 0.3s; /* Transiciones suaves para los efectos hover */
 }
+.FotoPerfil {
+  border: solid red 5px;
+  background-color: red;
+  border-radius: 50%;
+  width: 140px;
+  height: 140px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden; 
+}
+
+.profileImage {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; 
+}
+
+.padrefoto {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.cambiafoto {
+  background-color: red;
+  width: 140px; /* Ancho igual al contenedor */
+  height: 140px; /* Altura igual al contenedor */
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  position: relative; 
+}
+
+.cambiafoto::after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-size: 14px;
+  pointer-events: none; 
+}
