--- a/app/components/buscador/navegador.module.css
+++ b/app/components/buscador/navegador.module.css
@@ -6,17 +6,17 @@
 .container {
   display: flex;
   align-items: center;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
   border-radius: 8px;
-  padding: 10px 15px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 10px 10px;
+  border: 2px solid rgb(62, 62, 255);
   transition: all 0.3s ease;
   width: 100%;
   max-width: 600px;
 }
 
 .container:hover {
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 9px 5px rgba(0, 68, 255, 0.15);
 }
 
 .inputClass {
