--- a/app/views/registro/registro.module.css
+++ b/app/views/registro/registro.module.css
@@ -1,189 +1,169 @@
-/* Estilos para el formulario */
-.form {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    gap: 10px;
-    max-width: 350px;
-    padding: 20px;
-    border-radius: 20px;
-    position: relative;
-  }
-  
-  /* Estilos generales para el contenedor principal */
-  .padre {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    max-width: 100%;
-  }
-  
-  /* Contenedor para centrar el formulario */
-  .todo {
-    display: flex;
-    justify-content: center;
- 
+.headerRegistro {
+  background-color: #41419b; 
+  padding: 20px; 
+  text-align: center;
+  margin-bottom: 20px;
 }
 
-  
-  /* Estilos para el título */
-  .title {
-    font-size: 23px;
-    color: 41419b;
-    font-weight: 600;
-    letter-spacing: -1px;
-    position: relative;
-    display: flex;
-    color: #41419b;
-    align-items: center;
-    padding-left: 30px;
-    margin-top: 2rem;
+.hoad {
+  background-color: blue; 
+}
 
-  }
-  .bienvenida{
-    font-size: 28px;
-    justify-content: center;
-    text-align: center;
-    color: #41419b;
-    font-weight: 600;
-    letter-spacing: -1px;
-    position: relative;
-    display: flex;
-    align-items: center;
-  
-  }
-  /* Estilos para los puntos antes y después del título */
-  .title::before, .title::after {
-    position: absolute;
-    content: "";
-    height: 16px;
-    width: 16px;
-    border-radius: 50%;
-    left: 0px;
-    
-    background-color:#41419b;
-  }
-  
-  .title::before {
-    width: 18px;
-    height: 18px;
-  }
-  
-  .title::after {
-    width: 18px;
-    height: 18px;
-    animation: pulse 1s linear infinite;
-  }
-  
-  /* Estilos para el mensaje y el enlace de inicio de sesión */
-  .message, .signin {
-    color: rgba(88, 87, 87, 0.822);
-    font-size: 14px;
-  }
-  
-  .signin {
-    text-align: center;
-    margin-top: 1rem;
-  }
-  
-  .signin a {
-    color: royalblue;
-  }
-  
-  .signin a:hover {
-    text-decoration: underline royalblue;
-  }
-  
-  /* Estilos para el contenedor flex dentro del formulario */
-  .flex {
-    display: flex;
-    width: 100%;
-    gap: 6px;
-  }
-  
-  /* Estilos para las etiquetas y entradas del formulario */
-  .form label {
-    position: relative;
-  }
-  
-  .form label .input {
-    width: 100%;
-    padding: 10px 10px 20px 10px;
-    outline: 0;
-    border: 1px solid rgba(105, 105, 105, 0.397);
-    border-radius: 10px;
-  }
-  
-  .form label .input + span {
-    position: absolute;
-    left: 10px;
-    top: 15px;
-    color: grey;
-    font-size: 0.9em;
-    cursor: text;
-    transition: 0.3s ease;
-  }
-  
-  .form label .input:placeholder-shown + span {
-    top: 15px;
-    font-size: 0.9em;
-  }
-  
-  .form label .input:focus + span, .form label .input:valid + span {
-    top: 30px;
-    font-size: 0.7em;
-    font-weight: 600;
-  }
-  
-  .form label .input:valid + span {
-    color: green;
-  }
-  
-  /* Estilos para el logo dentro del encabezado */
-  .logo {
-    width: auto;
-    margin: 0 auto; 
-    max-width: 100vw; 
-    justify-content: center;
-  }
-  
-  /* Estilos para el encabezado */
-  .headerRegistro {
-    background-color:
-    #41419b; 
-    padding: 20px; 
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  .hoad{
-    background-color: blue; 
-  }
+.logo {
+  width: auto;
+  margin: 0 auto; 
+  max-width: 100vw; 
+  justify-content: center;
+}
 
-  .submit {
-    border: none;
-    outline: none;
-    background-color: #41419b;
-    padding: 10px;
-    border-radius: 10px;
-    color: #fff;
-    font-size: 16px;
-    transform: .3s ease;
-  }
+.contenedor_subHeader{
+  margin-bottom: 1rem;
+  margin: 1rem;
+}
+
+.form {
+  background: white;
+  border-radius: 8px;
+  width: 100%;
+}
+.p2{
+  color: gray;
+}
+.contenedor_inputs {
+  display: flex;
+  flex-direction: column; /* Asegura que los inputs estén en columna */
+  align-items: center; /* Centra horizontalmente los inputs */
+}
+.inputGroup {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 100%; 
+  max-width: 350px; 
+  display: flex;
+  flex-direction: column;
+}
+.label {
+  color: black;
+  font-weight: bold;
+  display: flex;
+  justify-content: flex-start;
+  width: 100%;
   
-  .submit:hover {
-    background-color: rgb(56, 90, 194);
-  }
-  
-  /* Animación de pulso para los puntos del título */
-  @keyframes pulse {
-    from {
-      transform: scale(0.9);
-      opacity: 1;
-    }
-    to {
-      transform: scale(1.8);
-      opacity: 0;
-    }
-  }
-  
+}
+.input {
+  width: 100%;
+  padding: 12px; 
+  margin-bottom: 1.25rem;
+  border: 1px solid rgb(146, 146, 146);
+  border-radius: 10px;
+  font-size: 1rem; 
+}
+
+.inputError {
+  border-color: red;
+}
+
+.inputSuccess {
+  border-color: green;
+}
+
+.iconError {
+  color: red;
+  position: absolute;
+  right: 10px;
+  font-size: 1.2em;
+}
+
+.iconSuccess {
+  color: green;
+  position: absolute;
+  right: 10px;
+  font-size: 1.2em;
+}
+.iconError, .iconSuccess {
+  top: 50%; 
+  transform: translateY(-50%);
+  font-size: 1.2em;
+}
+
+.errorLabel {
+  color: red;
+}
+
+.contenedorBoton{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.submit {
+  display: flex;
+  justify-content: center;
+  width: 80%;
+  padding: 1rem;
+  border: none;
+  border-radius: .7rem;
+  color: white;
+  font-size: 1rem;
+  margin-bottom: 1rem;
+}
+
+.submit[disabled] {
+  background-color: grey;
+}
+
+.errorMessage {
+  color: red;
+  font-size: 14px;
+  margin-top: 10px;
+}
+
+ .signin {
+  text-align: center;
+  color: gray;
+}
+.linkFromIniciarSesion{
+  color: black;
+}
+
+.separator {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  color: #acacac;
+  padding-top: 2rem;
+}
+
+.separator .line {
+  display: block;
+  width: 20%;
+  height: 1px;
+  border: 0;
+  background-color: #9e9b9b;
+}
+.containerBtn{
+  display: flex;
+  justify-content: center;
+  margin-top: 2rem;
+  width: 100%;
+  justify-content: center;
+}
+.btnG {
+  display: flex; 
+  align-items: center; 
+  background-color: #ffffff; 
+  color: rgb(0, 0, 0); 
+  border: 1px solid rgb(180, 180, 180);
+  border-radius: 4px; 
+  font-size: 16px; 
+  padding: 5px;
+  width: 80%;
+  justify-content: center;
+}
+
+
+.iconGoogle{
+  width: 10%;
+}
